# hpc

./: LidDrivenCavity.h  LidDrivenCavitySolver.cpp  Makefile  README.md  hpc-lp.workspace  test.txt
.codelite/: hpc-lp.session  hpc-lp.tags  refactoring.db
.git-old/: COMMIT_EDITMSG  config  index  packed-refs
.git-old/logs/: HEAD
.git-old/logs/refs/remotes/origin/: HEAD  master
.git-old/objects/pack/: pack-a697150a5241fd47e6a3c7d850d77d2422065dbc.idx  pack-a697150a5241fd47e6a3c7d850d77d2422065dbc.pack
.git-old/refs/heads/: master
111/: 111.mk  111.project  main.cpp
111/Debug/: 111  up_up_LidDrivenCavitySolver-master_src_LDCmngMPI.cpp.o.d
band/: band.mk  band.project  main.cpp
band/Debug/: main.cpp.o.d
hpc-cw/: LidDrivenCavity.cpp  LidDrivenCavity.h  LidDrivenCavitySolver.cpp  O-LidDrivenCavity.cpp  O-LidDrivenCavitySolver.cpp  OPoisson.cpp  OPoisson.h  Poisson.cpp  Poisson.h  Poisson_LU.cpp  hpc-cw.mk  hpc-cw.project  hpc-cw.txt  myp  p  test
hpc-cw/Debug/: LidDrivenCavity.cpp.o.d  LidDrivenCavitySolver.cpp.o.d  Poisson.cpp.o.d  hpc-cw
new-hpc/: CMakeLists.txt  LidDrivenCavity.cpp  LidDrivenCavity.h  LidDrivenCavitySolver.cpp  Poisson.cpp  Poisson.h  Poisson_LU.h  data.txt  horizontalV.txt  horizontalV_re100.txt  new-hpc.mk  new-hpc.project  s.txt  s_re100.txt  test.txt  v.txt  v_re100.txt  verticalV.txt  verticalV_re100.txt
new-hpc/Debug/: LidDrivenCavity.cpp.o.d  LidDrivenCavitySolver.cpp.o.d  Poisson_LU.cpp.o.d  new-hpc
